2003-06-13  Derek Price  <derek@ximbiot.com>

	* diff.c (diff_fileproc): Fix memory leak.
	(Patch from Kenneth Lorber <keni@his.com>.)

2003-06-12  Derek Price  <derek@ximbiot.com>

	* root.c (parse_cvsroot, local_cvsroot): Parse trailing '/'s off the
	end of cvsroots.  Make arguments const.
	* cvs.h: Update prototypes to match.
	(Idea from Miles Zarathustra <shiva@aranyaka.org>.)

2003-06-12  Derek Price  <derek@ximbiot.com>

	* checkout.c (safe_location): Fix memory leak.
	(Patch from Kenneth Lorber <keni@his.com>.)

2003-06-11  Larry Jones  <lawrence.jones@eds.com>

	* filesubr.c (xresolvepath): Fix memory leak.
	(Original patch from Kenneth Lorber <keni@his.com>.)

2003-06-11  Derek Price  <derek@ximbiot.com>

	* commit.c: Change Parse_Info calling convention to include void *
	suggested in HACKING file and generalize all argument to opt.
	* cvs.h: update defs for Parse_Info and its callproc.
	* edit.c: Change Parse_Info calls for new calling convention.
	* logmsg.c: Ditto.
	* parseinfo.c: Change Parse_Info for new calling convention.
	* server.c: Change Parse_Info calls for new calling convention.
	* tag.c: Ditto.
	(Original patch from Ken Lorber <keni@his.com>.)

2003-06-11  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerate for new configure.in.

2003-06-11  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh: Change warning messages to note that defective tools
	can result in defective results, both pass and fail.  Also change
	"which" to "that" for errant grammar pedants.

2003-06-10  Derek Price  <derek@ximbiot.com>

	* recurse.c (start_recursion): Avoid unneeded allocation.

2003-06-10  Mark D. Baushke  <mdb@gnu.org>

	* rcs.c (RCS_setlocalid,RCS_setincexc): New functions to support
	LocalKeyword and KeywordExpand config keywords.

	* rcs.h (RCS_setlocalid,RCS_setincexc): New prototypes.

	* parseinfo.c (parse_config): Added LocalKeyword
	and KeywordExpand keywords.

	* sanity.sh (keywordexpand): New CVSROOT/config tests for